--- a/dg-counter.css
+++ b/dg-counter.css
@@ -11,23 +11,56 @@ table {
     width: 100%;
 }
 
-th, td {
-    text-align: left;
-    padding: 8px;
-}
-
-tr{
-    background-color: #f9f9f9
-}
-
 th {
+    text-align: center;
+    padding: 8px;
     background-color: #42b983;
     color: white;
 }
-    
+
+tr{
+    text-align: left;
+    padding: 8px;
+    background-color: #f9f9f9
+}
+
+tr:nth-child(1) {
+    border: 2px solid #f00;
+    background-color: #93ff97
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.block {
+    width: 100%;
+}
+
+.control {
+    width: 180px;
+}
+
+.triangle_up {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 18px 31.2px 18px;
+    border-color: transparent transparent #0f0 transparent;
+}
+
+.triangle_down {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 31.2px 18px 0 18px;
+    border-color: #f00 transparent transparent transparent;
+}
+
 .button {
     display: inline-block;
-    padding: 5px 25px;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
