--- a/dg-counter.css
+++ b/dg-counter.css
@@ -24,7 +24,7 @@ tr{
     background-color: #f9f9f9
 }
 
-tr:nth-child(1) {
+tr.active {
     border: 2px solid #f00;
     background-color: #93ff97
 }
@@ -66,17 +66,19 @@ tr:nth-child(1) {
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: #4CAF50;
+    color: #000;
+    background-color: #eee;
     border: none;
-    border-radius: 15px;
-    box-shadow: 0 6px #999;
+    border-radius: 6px;
+    box-shadow: 0 5px #999;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {
+    background-color: #3e8e41;
+    color: #fff;
+}
 
 .button:active {
-  background-color: #3e8e41;
   box-shadow: 0 3px #666;
   transform: translateY(2px);
 }
